# pmg

./: .gitignore  README.md
vcs/: go.mod  main.go
vcs/auth/: auth.go
vcs/checker/: checker.go
vcs/commands/: commands.go
vcs/database/: db.go
vcs/utils/: utils.go
web-ide/: FEATURES.md  PLUGIN_GUIDE.md  main.py  package-lock.json  package.json  pyproject.toml  server.js  server.py
web-ide/public/: app.js  example-plugin.js  index.html  style.css
web-ide/public/components/: ai-chat-ui.js  browser-modal.js  media-viewer.js  status-bar.js
web-ide/public/js/: app.js
web-ide/public/modules/core/ai-chat/: chat.js
web-ide/public/modules/core/highlight/: syntax.js
web-ide/public/plugins/: elin.js
website/backend/: .gitignore  main.py  pyproject.toml  requirements.txt
website/backend/app/: consistency.py  database.py  dependencies.py  models.py
website/backend/app/routers/: auth.py  pages.py  profile.py  repo.py
website/frontend/: index.html  package-lock.json  package.json
website/frontend/src/: App.css  App.jsx
website/frontend/src/components/: AuthModal.jsx  DocsPage.jsx  ProfilePage.jsx  RepoPage.jsx  SearchBar.jsx  header.jsx  hero.jsx
