[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9.0",
]
